--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 MONGODB_URI=mongodb+srv://olivier:6FRJMhYPL8TYo7Qj@cluster0.fkbhf9b.mongodb.net/cl-00sv?retryWrites=true&w=majority&appName=Cluster0
-
+SECRET_KEY=abc
